# Model_Identification

./: .gitignore  CMakeLists.txt  Makefile  app.py  csb.qrc  csb_rc.py  demo.py  requirement.txt
GuiLib/: AboutAuthor.py  AboutAuthor.ui  IOprocess.py  MainWindow.ui  MplWidget.py  SignalGen.py  SignalGen.ui  SignalSample.py  SignalSample.ui  mplwidget.py  ui_about_author.py  ui_mainwindow.py  ui_signal_gen.py  ui_signal_sample.py
analysis/: lscf.py  stabilisation.py
data/: impact2_response0.lvm.pkl  input.txt  output_a.txt  output_b.txt
showcase/: frf.ipynb
utility/: clolor_pick.py  dock.py  genFRF.py  misc.py  sample.py  simulate.py  tools.py  uff.py  widgets.py
